--- a/courses/CSE-6240.md
+++ b/courses/CSE-6240.md
@@ -1,6 +1,6 @@
 ---
 layout: course
-title: CSE-6240 - Web Search & Text Mining
+title: CSE-6240 - Web Seahgghhrch & Text Mining
 aliases: 
 course_id: CSE-6240
 permalink: /CSE-6240/
